Movie Clip Editor doesn't load images with numerical suffix #107443

Closed
opened 2023-04-28 16:35:33 +02:00 by Steffen Dünner · 5 comments

System Information
Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.30.02

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-28 14:14, hash: 67700ced54e4
Worked: All previous versions of Blender since the dawn of time

Short description of error
The Movie Clip Editor doesn't open JPEG and EXR images any more. Movie clips like movs still work, so do PNGs etc..
Might be related to recent changes in OIIO?!

Exact steps for others to reproduce the error

  • Open Blender
  • Open a Movie Clip Editor
  • Open either the attached JPEG or any other image file you find

BUG_MovieClipEditor_v01.jpg

  • Blender hangs
**System Information** Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.30.02 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-28 14:14, hash: `67700ced54e4` Worked: All previous versions of Blender since the dawn of time **Short description of error** The Movie Clip Editor doesn't open JPEG and EXR images any more. Movie clips like movs still work, so do PNGs etc.. Might be related to recent changes in OIIO?! **Exact steps for others to reproduce the error** - Open Blender - Open a Movie Clip Editor - Open either the attached JPEG or any other image file you find ![BUG_MovieClipEditor_v01.jpg](/attachments/723cbee9-0c7e-4a13-a2be-308c3a67a197) - Blender hangs
Steffen Dünner added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-28 16:35:34 +02:00

blender-3.6.0-alpha+main.86a14faf6917-linux.x86_64-release (= latest Build Bot) works

blender-3.6.0-alpha+main.86a14faf6917-linux.x86_64-release (= latest Build Bot) works

I found the culprit: 6701d24084 by Campbell Barton ( @ideasman )

I found the culprit: https://projects.blender.org/blender/blender/commit/6701d24084f515e2749fd7367b4cefa185748769 by Campbell Barton ( @ideasman )
Member

Confirmed, but clarifying that this affects images that have names that include a numerical suffix, so the attached "BUG_MovieClipEditor_v01.jpg" does not work but "BUG_MovieClipEditor.jpg" does load.

Confirmed, but clarifying that this affects images that have names that include a numerical suffix, so the attached "BUG_MovieClipEditor_v01.jpg" does not work but "BUG_MovieClipEditor.jpg" does load.
Harley Acheson added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-28 17:48:59 +02:00
Harley Acheson added this to the Core project 2023-04-28 17:49:11 +02:00

Ah cool, I wondered why a quick test with an EXR (obviously without numerical suffix) loaded.

Ah cool, I wondered why a quick test with an EXR (obviously without numerical suffix) loaded.
Member

@ideasman42 - Fairly certain the only problem in #6701d24084 is in get_sequence_filepath in "movieclip.c". The string_maxncpy argument passed to BLI_path_sequence_encode is sizeof(filepath) which is always 8.

@ideasman42 - Fairly certain the only problem in #6701d24084 is in `get_sequence_filepath` in "movieclip.c". The string_maxncpy argument passed to BLI_path_sequence_encode is `sizeof(filepath)` which is always 8.
Campbell Barton was assigned by Harley Acheson 2023-04-28 19:00:56 +02:00
Harley Acheson changed title from Regression: Movie Clip Editor doesn't load JPEG / EXR images any more to Movie Clip Editor doesn't load images with numerical suffix 2023-04-28 19:02:08 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-29 03:32:04 +02:00
Bastien Montagne removed this from the Core project 2023-07-03 12:46:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107443
No description provided.