Fix #107443 movie clip fails to load

Regression with incorrect sizeof argument to BLI_path_sequence_encode.

[0]: 6701d24084f515e2749fd7367b4cefa185748769